--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -1,10 +1,16 @@
 #toolbar {
-  position: fixed;
-  right: 10px;
-  width: 500px;
+  min-width: 100px;
+  width: 50%;
+  max-width: 500px;
   height: 100px;
+  position: fixed;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: white;
+  border-radius: 25px;
+  box-shadow: 0px 0px 20px 0px rgba(255, 255, 255, 0.5);
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -12,8 +18,8 @@
 #toolbar button,
 #toolbar button:focus {
   background-color: #2b2d42;
-  height: 70%;
-  width: 10%;
+  height: 70px;
+  width: 50px;
   color: white;
   padding: 0;
   border: none;
@@ -21,25 +27,6 @@
   transition: transform 0.3s ease;
 }
 
-#newNode {
-  background-color: #2b2d42;
-  height: 70%;
-  width: 10%;
-  color: white;
-  padding: 0;
-  border: none;
-  border-radius: 5px;
-  transition: transform 0.3s ease;
-}
-
-#newNode:hover {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
+#toolbar button:hover {
+  transform: translateY(-5px);
 }
