--- a/src/components/CustomEdge/CustomEdge.css
+++ b/src/components/CustomEdge/CustomEdge.css
@@ -1,6 +1,7 @@
-.input {
-  width: 50px;
+.select {
+  width: 70px;
+  height: 30px;
   text-align: center;
   background-color: #2b2d42;
-  font-size: 12px;
+  font-size: 16px;
 }
