--- a/src/components/Entity/Entity.css
+++ b/src/components/Entity/Entity.css
@@ -49,6 +49,7 @@ li {
 
 li > * {
   width: 100%;
+  border: none;
 }
 
 li button {
@@ -76,14 +77,18 @@ li button {
 
 #newAttribute button,
 #newForeingKey button {
-  border-radius: 50%;
+  margin: 0;
+  border: none;
 }
 
 #newAttribute input[type='text'],
-#newForeingKey input[type='text'] {
+#newForeingKey input[type='text'],
+#newAttribute select,
+#newForeingKey select {
   flex-grow: 1;
   width: 0;
   height: 100%;
+  border: none;
 }
 
 #newAttribute input[type='text']:first-child,
@@ -98,4 +103,8 @@ input {
 input::placeholder {
   text-align: center;
   color: #8d99ae;
+}
+
+select {
+  text-align: center;
 }
