Alterado no toolbar botões para limpar a tela e chamar a função de gerar o código SQL, os botões tem images que ficam armazenadas na pasta "images". Passado a position do source e target no componente "EdgeLabel" no componente "CustomNode", exportado os valores das Edges. Criado o arquivo js para gerar o código SQL, exportados vários valores para esse arquivo.

--- a/src/components/Entity/Entity.css
+++ b/src/components/Entity/Entity.css
@@ -1,4 +1,4 @@
-#entity {
+.entity {
   height: auto;
   width: 250px;
   background-color: #2b2d42;
@@ -97,6 +97,7 @@ li button {
 }
 
 input {
+  text-align: center;
   border: none;
 }
 
