--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,7 +13,7 @@
   border-radius: 25px;
 }
 
-#inputName {
+#dataBaseName {
   margin: 0 auto;
   height: 25px;
   width: 200px;
@@ -21,3 +21,4 @@
   background-color: #2b2d42;
   text-align: center;
 }
+
