--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -22,6 +22,7 @@
   width: 50px;
   color: white;
   padding: 0;
+  margin: 1%;
   border: none;
   border-radius: 5px;
   transition: transform 0.3s ease;
@@ -29,4 +30,10 @@
 
 #toolbar button:hover {
   transform: translateY(-5px);
+}
+
+#toolbar button img {
+  max-width: 30px;
+  max-height: 50px;
+  border-radius: 5px;
 }
