--- a/src/components/CustomEdge/CustomEdge.css
+++ b/src/components/CustomEdge/CustomEdge.css
@@ -3,5 +3,7 @@
   height: 30px;
   text-align: center;
   background-color: #2b2d42;
+  border: solid 1px;
+  border-radius: 25px;
   font-size: 16px;
 }
